# iraklis7_scg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-app.yml  test-app.yml
iraklis7_scg/: __init__.py  config.py  cpw.py  scg.py
reports/: UART16550_0.6_delta_0.5b_report.md  UART_0.6_delta_0.5b_report.md  UART_v0.7_delta_v0.6_report.md
tests/: test_scg.py  test_scg_build.py
uvm_tb/: filelist.f  uart_agent.sv  uart_assertions.sv  uart_bfm.sv  uart_config.cfg  uart_coverage.sv  uart_driver.sv  uart_env.sv  uart_if.sv  uart_monitor.sv  uart_pkg.sv  uart_scoreboard.sv  uart_seq_item.sv  uart_sequencer.sv  uart_tb_top.sv  uart_test.vcd  uart_tests.sv
