[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iraklis7_scg"
version = "0.0.1"
description = "The Specification Compliance Generator will identify the delta between two hardware specifications versions of the same technology and produce a detailed report that may be used to guide further RTL and Verification efforts"
authors = [
  { name = "Iraklis Diamantidis" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["iraklis7_scg"]
force_sort_within_sections = true


